--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,29 @@
 * {
   font-family: "Poppins", sans-serif;
 }
-::-webkit-scrollbar {
-  display: none;
+/* Custom scrollbar styling */
+body {
+  --sb-track-color: #ffffff;
+  --sb-thumb-color: #146c99;
+  --sb-size: 5px;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 19px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 19px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
 }
