--- a/client/src/components/Quizzes_Container/getAllQuizzes/Quizzes.css
+++ b/client/src/components/Quizzes_Container/getAllQuizzes/Quizzes.css
@@ -28,7 +28,9 @@
   margin: 0;
   font-size: 12px;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
+  font-weight: 500;
 }
 .para_1 p {
   margin: 0;
@@ -36,11 +38,11 @@
 .button {
   width: 100%;
   margin-top: 8px;
-  height: 40px;
+  height: 55px;
   border-radius: 13px;
   border: 0.5px solid #eeeeee;
   background-color: green;
-  font-size: 16px;
+  font-size: 14px;
   color: #fff;
   font-weight: 500;
   margin-bottom: 8px;
