--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,3 +28,6 @@ body::-webkit-scrollbar-thumb {
     scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
   }
 }
+::-webkit-scrollbar {
+  display: none;
+}
