--- a/client/src/pages/Dashboard/Dashboard.css
+++ b/client/src/pages/Dashboard/Dashboard.css
@@ -1,28 +1,29 @@
-table{
-    width: 100%;
+table {
+  width: 100%;
 }
-table tr{
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-    margin-bottom: 5px;
+table tr {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  margin-bottom: 5px;
 }
-table tr th{
-    /* display: flex; */
-    flex: 30%;
-    width: fit-content;
-    text-align: left;
-    font-weight: 500;
-    padding: 5px;
+table tr th {
+  /* display: flex; */
+  flex: 30%;
+  width: fit-content;
+  text-align: left;
+  font-weight: 500;
+  padding: 5px;
 }
-th,td{
-    /* border: 1px solid #bbbaba; */
-    border-radius: 5px;
+th,
+td {
+  /* border: 1px solid #bbbaba; */
+  border-radius: 5px;
 }
-table tr td{
-    /* display: flex; */
-    flex: 70%;
-    padding: 5px;
+table tr td {
+  /* display: flex; */
+  flex: 70%;
+  padding: 5px;
 }
 /* .MuiCardContent-root{
     padding: 0;
@@ -33,8 +34,11 @@ table tr td{
     padding: 0;
 } */
 
-.dashboard{
-    width: 100%;
-    margin: 0;
-    /* background: linear-gradient(360deg, rgba(78,161,203,1) 0%, rgba(177,201,214,1) 39%, rgba(180,200,210,1) 100%); */
+.dashboard {
+  width: 100%;
+  margin: 0;
+  /* background-image: url("https://thumbs.dreamstime.com/b/art-craft-hand-drawn-doodle-tools-icons-set-vector-illustration-instruments-symbols-collection-cartoon-various-tools-73614482.jpg"); */
+  background-size: contain;
+  background-repeat: repeat;
+  /* background: linear-gradient(360deg, rgba(78,161,203,1) 0%, rgba(177,201,214,1) 39%, rgba(180,200,210,1) 100%); */
 }
