--- a/client/src/pages/Dashboard/Dashboard.css
+++ b/client/src/pages/Dashboard/Dashboard.css
@@ -37,8 +37,8 @@ table tr td {
 .dashboard {
   width: 100%;
   margin: 0;
-  /* background-image: url("https://thumbs.dreamstime.com/b/art-craft-hand-drawn-doodle-tools-icons-set-vector-illustration-instruments-symbols-collection-cartoon-various-tools-73614482.jpg"); */
+  /* background-image: url("https://i.pinimg.com/originals/5b/4c/d2/5b4cd292f6f382ab8d8a51b9fcaad5ed.jpg");
   background-size: contain;
-  background-repeat: repeat;
+  background-repeat: repeat; */
   /* background: linear-gradient(360deg, rgba(78,161,203,1) 0%, rgba(177,201,214,1) 39%, rgba(180,200,210,1) 100%); */
 }
