--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,13 @@
 
 body {
   background: linear-gradient(
-    135deg,
+    180deg,
     #f0f4fd 0%,
     #d9eaf5 50%,
+    #bfd4e6 100%,
+    #f0f4fd 30%,
+    #d9eaf5 50%,
+    #bfd4e6 100%,
     #bfd4e6 100%,
     #f0f4fd 30%,
     #d9eaf5 50%,
@@ -16,7 +20,8 @@ body {
   );
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  width: 100%;
 }
 
 /* Custom scrollbar styling */
@@ -50,4 +55,10 @@ body::-webkit-scrollbar-thumb {
 }
 ::-webkit-scrollbar {
   display: none;
+}
+
+@media screen and (max-width:600px) {
+  ::-webkit-scrollbar {
+  display: none;
+}
 }
