--- a/client/src/pages/Dashboard/Dashboard.css
+++ b/client/src/pages/Dashboard/Dashboard.css
@@ -37,6 +37,7 @@ table tr td {
 .dashboard {
   width: 100%;
   margin: 0;
+  height: 95vh;
   /* background-image: url("https://i.pinimg.com/originals/5b/4c/d2/5b4cd292f6f382ab8d8a51b9fcaad5ed.jpg");
   background-size: contain;
   background-repeat: repeat; */
